[package]
name = "waitlist"
description = "Keep track of an ordered list of Wakers to wake"
version = "0.1.1"
authors = ["Thayne McCombs <astrothayne@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["async", "await", "waker"]
categories = ["asynchronous", "concurrency"]

[dev-dependencies]
futures-task = "0.3"
